Fix overflow issue & h2 position(desktop version)

--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -50,6 +50,7 @@ h2 {
   text-align: center;
   text-transform: capitalize;
   left: 50%;
+  width: 50%;
   transform: translatex(-50%);
   z-index: 1;
   line-height: 80px;
